# snack

./: .gitattributes  README.md
code/: pyproject.toml
code/data/: BB11001.msf  BB11002.msf  BB11003.msf  BB11004.msf  BB11005.msf  BB11006.msf  BB11007.msf  BB11008.msf  BB11009.msf  BB11010.msf  BB11011.msf  BB11012.msf  BB11013.msf  BB11014.msf  BB11015.msf  BB11016.msf  BB11017.msf  BB11018.msf  BB11019.msf  BB11020.msf  BB11021.msf  BB11022.msf  BB11023.msf  BB11024.msf  BB11025.msf  BB11026.msf  BB11027.msf  BB11028.msf  BB11029.msf  BB11030.msf  BB11031.msf  BB11032.msf  BB11033.msf  BB11034.msf  BB11035.msf  BB11036.msf  BB11037.msf  BB11038.msf  BB12001.msf  BB12002.msf  (+345 more)
code/notebooks/: main.ipynb
code/scripts/: remove_data.py
code/snack/: __init__.py  alignment.py  data.py  features.py  metric.py  train.py
paper/: main.tex
